--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -10,7 +10,7 @@
         %p= @video.description
         .actions
           %a.btn.btn-primary(href="") Watch Now
-          = link_to '+ My Queue', queue_items_path(video_id: @video.id), :method => :post, class: 'btn btn-default'
+          = link_to '+ My Queue', queue_items_path(video_id: @video.id), :method => :post, class: 'btn btn-default' unless queue_item_exist?(current_user.id, @video.id) 
 
 
 %section.reviews.container
@@ -22,7 +22,7 @@
             %label Rate this video
             .row
               .col-sm-3
-                =f.select :rating, options_for_video_rating
+                =f.select :rating, options_for_video_rating, include_blank: true
           .form-group
             %label Write Review
             .row
