--- a/app/views/followings/index.html.haml
+++ b/app/views/followings/index.html.haml
@@ -13,9 +13,9 @@
         %tr
           %td
             %img(src="http://www.gravatar.com/avatar/#{Digest::MD5.hexdigest('knwang@gmail.com'.downcase)}?s=40")
-            = link_to "#{following.subject.fullname}", user_path(following.subject)
-          %td.extra-padding 20
-          %td.extra-padding 30
+            = link_to following.subject.full_name, user_path(following.subject)
+          %td.extra-padding #{following.subject.queue_items.size} 
+          %td.extra-padding #{number_of_followers(following.subject)}  
           %td.extra-padding
-            = link_to "", method: :post do
+            = link_to following_path(following), method: :delete do
               %i.glyphicon.glyphicon-remove
