--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,7 +5,7 @@
     %ul.col-md-3.clearfix
       %li= link_to "Videos", home_path
       %li= link_to "My Queue"
-      %li= link_to "People"
+      %li= link_to "People", user_followings_path(current_user) 
     = form_tag search_videos_path, class: "col-md-5 navbar-form" do
       .form-group
         %input.form-control(type="text" name="search_word" placeholder="Search for videos here")
