--- a/app/views/password_resets/show.html.haml
+++ b/app/views/password_resets/show.html.haml
@@ -1,13 +1,14 @@
 %section.reset_password.container
   .row
     .col-sm-10.col-sm-offset-1
-      %form
+      =form_tag password_resets_path do
         %header
           %h1 Reset Your Password
         %fieldset.form-group
-          %label New Password
+          = hidden_field_tag :token, @token 
+          = label_tag :password, "New Password"
           .row
             .col-sm-4
-              %input.form-control(type="password")
+              = text_field_tag :password, nil, class: 'form-control'
         %fieldset.form-group.action
           %input(type="submit" value="Reset Password" class="btn btn-default")
