--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,10 +2,11 @@
   %h1.col-md-2
     = link_to "MyFLiX"
   - if logged_in? 
-    %ul.col-md-3.clearfix
+    %ul.col-md-4.clearfix
       %li= link_to "Videos", home_path
       %li= link_to "My Queue"
       %li= link_to "People", user_followings_path(current_user) 
+      %li= link_to "Invite", invite_friend_path 
     = form_tag search_videos_path, class: "col-md-5 navbar-form" do
       .form-group
         %input.form-control(type="text" name="search_word" placeholder="Search for videos here")
