--- a/app/views/admin/videos/new.html.haml
+++ b/app/views/admin/videos/new.html.haml
@@ -2,16 +2,19 @@
   .container
     .row
       .col-md-10.col-md-offset-1
-        %ul.nav.nav-tabs
-          %li
-            %a(href="/ui/admin_views_payments") Recent Payments
-          %li.active
-            %a(href="") Add a New Video
-
         =bootstrap_form_for [:admin, @video], layout: :horizontal, label_col: 'col-sm-2', control_col: 'col-sm-5'  do |f|
-          = f.text_field :title, class: 'col-sm-5' 
-          = f.collection_select(:category_id, Category.all, :id, :title, :include_blank => 'Please select a category', class: "col-sm-5")
-          = f.text_area :description, rows: 8, class: 'col-sm-5'
+          %ul.nav.nav-tabs
+            %li
+              %a(href="/ui/admin_views_payments") Recent Payments
+            %li.active
+              %a(href="") Add a New Video
+          %fieldset
+            = f.text_field :title, class: 'col-sm-5' 
+            = f.collection_select(:category_id, Category.all, :id, :title, :include_blank => 'Please select a category', class: "col-sm-5")
+            = f.text_area :description, rows: 8, class: 'col-sm-5'
+            = f.file_field :large_cover, class: "btn btn-file"
+            = f.file_field :small_cover, class: "btn btn-file"
+            = f.text_field :video_url 
           %fieldset.actions.form-group
-            .col-sm-6.col-md-offset-3
+            .col-sm-2.col-md-offset-2
               %input(type="submit" value="Add Video" class="btn btn-default")
