--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -9,10 +9,8 @@
           %span Rating: #{@video.rating_average}/5.0
         %p= @video.description
         .actions
-          %a.btn.btn-primary(href="") Watch Now
+          %a.btn.btn-primary(href= "#{@video.video_url}") Watch Now
           = link_to '+ My Queue', queue_items_path(video_id: @video.id), :method => :post, class: 'btn btn-default' unless queue_item_exist?(current_user.id, @video.id) 
-
-
 %section.reviews.container
   .row
     .col-sm-10.col-sm-offset-1
