--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -16,7 +16,7 @@
           = f.text_field :full_name, label: "Full Name"
           = hidden_field_tag 'token', @token if @token
         %fieldset.credit_card
-          %span.payment-error
+          %span.payment-errors
           .form-group
             %label.control-label.col-sm-2(for='credit-card-number') Credit Card Number
             .col-sm-6
